fix: melhorias de segurança - IDOR, CORS, rate limiting, validação de upload
- Criar SecurityUtils para extrair user do JWT (não confiar em headers)
- BillingController: remover X-User-Id header spoofing (5 endpoints)
- Adicionar @PreAuthorize em GETs de Condominio e Apolice
- ApoliceService: validar acesso ao condomínio em findById/findByCondominio
- JwtAuthenticationFilter: logging específico por tipo de exceção + IP
- SecurityConfig: CORS restrito a headers específicos
- RateLimitFilter: bucket de 10 req/min para endpoints de auth
- DocumentoService: validação de magic bytes no upload

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>